--- a/WebApp/packages.config
+++ b/WebApp/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jQuery" version="2.2.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.3" targetFramework="net45" />
@@ -21,4 +21,5 @@
   <package id="Senparc.Weixin.MP" version="13.5.4" targetFramework="net45" />
   <package id="Senparc.Weixin.MP.MVC" version="4.0.2" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="wxPay.Net" version="1.0.0" targetFramework="net45" />
 </packages>
