Demo版本中通过NuGet安装wxPay组件

--- a/wxPay.Net/packages.config
+++ b/wxPay.Net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20505.0" targetFramework="net45" />
@@ -7,4 +8,5 @@
   <package id="Senparc.Weixin" version="4.5.7" targetFramework="net45" />
   <package id="Senparc.Weixin.MP" version="13.5.4" targetFramework="net45" />
   <package id="Senparc.Weixin.MP.MVC" version="4.0.2" targetFramework="net45" />
+  <package id="wxPay.Net" version="1.1.0" targetFramework="net45" />
 </packages>
